# eitannealing

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  VALOR_CORRENTE_190.txt  basal01.ampl_calibrado.txt  circular_2D.msh  circular_A_2D.msh  circular_B_2D.msh  coleta02_1.0mA_media.txt  coleta03_1.0mA_media.txt  cpyeitsolver.pxd  cuba_190ma_cp.txt  eitannealingtest.cpp  eitannealingtest.h  eitannealingtest.kdev4  lin01a.ampl_calibrado.txt  lin01b.ampl_calibrado.txt  main.cpp  pyeitsolver.cp38-win_amd64.pyd  pyeitsolver.cpp  pyeitsolver.pyx  script.sh  scripte2.sh  setup.py  torax_fernando_866ma_cp.txt  tri01a.ampl_calibrado.txt  tri01b.ampl_calibrado.txt  tri01c.ampl_calibrado.txt  tri02b.ampl_calibrado.txt  tri02b.ampl_calibrado_av2.txt  ueta_circuito_0XXX_AMPLITUDES.txt  ueta_circuito_0XXX_AMPLITUDES_10mA.txt  ueta_circuito_0XXX_CORRENTES.txt  ueta_circuito_basal_0XXX_AMPLITUDES_10mA.txt  vcpkg.json
cmake_modules/: FindEigen2.cmake  FindEigen2.cmake~  FindGMSH.cmake
cufppcgsolver/: CMakeLists.txt
cufppcgsolver/postproc/: directsolvertester.py
cufppcgsolver/src/: conversions.cpp  cudacg.h
cufppcgsolver/src/cusolver/: main.cpp
cufppcgsolver/src/pardiso/: main.cpp
data/: circular_B_2D.msh  coleta01_1.0mA_media.txt  current_0_cp.txt  epsilon_media_1024x1.txt  lin01c.ampl_calibrado.txt  lin02b.ampl_calibrado.txt  synthetic_imag.txt  synthetic_real.txt  synthtest.txt  synthtest03.txt  synthtest2_i.txt  synthtest2_interleaved.txt  synthtest2_r.txt  synthtest3_interleaved.txt  synthtest4_interleaved.txt  torax_fernando_866ma_cp.txt  tri02b.ampl_calibrado_0im.txt  ueta_circuito_0XXX_CORRENTES.txt  ueta_circuito_basal_0XXX_CORRENTES_10mA.txt
directsolver/: CMakeLists.txt
directsolver/postproc/: calculateRelativeErrors.ipynb  check_executions.py  directsolvertester.py  dirsolverpostproc.py  processCompilation.ipynb  requirements.txt
directsolver/scripts/postproc/: check_executions.py  directsolvertester.py  dirsolverpostproc.py  process_compilation.py  process_output_file.py  requirements.txt
directsolver/src/: conversions.cpp  conversions.h  cudacg.cu  cudacg.h  main.cpp
directsolver/src/cufppcgsolver/: cudacg.cu  main.cpp
directsolver/src/cusolver/: helper_cuda.h  helper_cusolver.h  main.cpp
directsolver/src/pardiso/: main.cpp
libs/: CMakeLists.txt  EitAnnealing-config.cmake  EitAnnealingLib-config.cmake  directsolver.cpp  directsolver.h  pyeitsolver.cpp
libs/pyeitsolver/: MANIFEST.in  __init__.py  _pyeitsolver.cpp  pyeitsolver.py  setup.py
libs/python/: eitdirectsolver.i
python/: CMakeLists.txt  README.md  petsc.txt  pyproject.toml  tests.txt  vcpkg.json
python/cmake-modules/: FindPETSc.cmake
python/examples/: solve.py  solve_complex.py
python/src/: complex.cpp  core.cpp
python/src/pyeitsolver/: __init__.py  complex_wrapper.py  core_wrapper.py  validation.py  wrapper.py
python/tests/: assembly_test.py  basic_test.py  complex_eigen_test.py  complex_petsc_test.py  complex_test.py  evaluation_test.py  matrices_test.py  mesh_io.py  petsc_test.py  test.py  test_currents_validation.py  view_matrices.ipynb  view_mse_matrix.ipynb
python/tests/data/: basal01.ampl_calibrado.msh  lin01a.ampl_calibrado.msh  lin01b.ampl_calibrado.msh  lin01c.ampl_calibrado.msh  lin02b.ampl_calibrado.msh  tri01a.ampl_calibrado.msh  tri01b.ampl_calibrado.msh  tri01c.ampl_calibrado.msh  tri02b.ampl_calibrado.msh  tri02b.ampl_calibrado_av.msh  tri02b.ampl_calibrado_av2.msh
src/: assembleMatrix.cpp  assembleMatrix.h  basematrix.h  circularbuff.h  complextest.cpp  eigen3test.cpp  eigen3testcomplex.cpp  gradientnormregularisation.cpp  gradientnormregularisation.h  graphics.cpp  graphics.h  incomplete_LDLT.h  incomplete_cholesky.cpp  incomplete_cholesky.h  incomplete_ldlt.cpp  incomplete_lq_builder.h  incomplete_qr_builder.cpp  incomplete_qr_builder.h  incomplete_qr_complex.h  incomplete_qr_complex2.h  init_obs_problem.cpp  init_obs_problem.h  initproblem.cpp  intcoef.cpp  intcoef.h  lapack_triangular_solver.h  lbmatrixbuilder.h  main.cpp  main_complex.cpp  maincalibration.cpp  maincomplex.cpp  maincuda.cpp  maindirect.cpp  mainlb.cpp  mainpyeitsolver.cpp  maintwosteps.cpp  matrixview.h  nodecoefficients.h  nodecoeficients.cpp  observations.cpp  (+34 more)
src/complex/: gradientnormregularisationcomplex.cpp  gradientnormregularisationcomplex.h  graphicscomplex.cpp  incomplete_choleskycomplex.cpp  incomplete_choleskycomplex.h  solutioncomplex.cpp  solutioncomplex.h  solutioncomplexcalibration.cpp  solutioncomplexcalibration.h  solutioncomplexcomplete.cpp  solutioncomplexcomplete.h  solvercomplex.cpp  solvercomplex.h
src/cuda/: HighResClock.cpp  HighResClock.h  analysis.cpp  analysis.h  color.cpp  color.h  matrix-cpjds.cpp  matrix-cpjds.cu  matrix-cpjds.h  model.cpp  model.h  number.cpp  number.cu  number.h  settings.h  solutioncuda.cpp  solutioncuda.h  solver-cpcg.cu  solver-cpcgcg.cu  solver-pcg.cu  solver-pcg.h  solvercublas.cpp  solvercublas.cu  solvercublas.h  solvercuda.cpp  solvercuda.cu  solvercuda.h  stiffness.cpp  stiffness.h  utils.cpp  utils.h  vector.cpp  vector.cu  vector.h
src/gmsh/: gmshgraphics.cpp  gmshgraphics.h
src/parameters/: parametersparser.cpp  parametersparser.h
src/python/: eitdirectsolver.cpp  eitdirectsolver.i
src/threedim/: assembleMatrix3D.cpp  initproblem3D.cpp  nodecoeficients3D.cpp  problem3D.h
src/twodim/: assembleMatrix2D.cpp  initproblem2D.cpp  nodecoeficients2D.cpp  problem2D.h
src/util/: EigenSymmQuadratic.h  eigen_sizestype_adaptor.hpp  fill_with_smallest.hpp  heap_siftdown.hpp  standard_deviation.hpp
src/util/timestamp/: timestamp.h
tests/: CMakeLists.txt  bench_build_qr.cpp  bench_lbsolver_scalar_qr_vs_llt.cpp  bench_new_sparsecomplexqr.cpp  bench_symmetric_x_full.cpp  eigen3test.cpp  eigen3testcomplex.cpp  stddevtest.cpp  test_eigen_complex.cpp  test_heap.cpp  test_incomplete_lq.cpp  test_lb_least_eigenvalue.cpp  test_lb_solution.cpp  test_lb_solution_complex.cpp  test_lb_solver.cpp  test_new_lb_matrix_builder.cpp  test_observations.cpp  test_prereg_complex_incomplete.cpp  test_solver_lb_complex.cpp  test_solver_lb_complex2.cpp
(+2 files in other folders)
