find_package(pybind11)

if(pybind11_FOUND)
	pybind11_add_module(_pyeitsolver pyeitsolver/_pyeitsolver.cpp $<TARGET_OBJECTS:eit_core>)
    install(FILES pyeitsolver/__init__.py pyeitsolver/pyeitsolver.py DESTINATION EitAnnealing/pyeitsolver)
    install(FILES pyeitsolver/setup.py DESTINATION EitAnnealing)
    install(TARGETS _pyeitsolver DESTINATION EitAnnealing/pyeitsolver)
endif()

add_library(eitannealinglib STATIC directsolver.cpp $<TARGET_OBJECTS:eit_core>)
set_target_properties(eitannealinglib PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION 1 DEBUG_POSTFIX _d)
install(FILES directsolver.h ../src/observations.h ../src/basematrix.h DESTINATION EitAnnealing/include)
install(TARGETS eitannealinglib EXPORT eitannealinglib-targets DESTINATION EitAnnealing/lib)
install(EXPORT eitannealinglib-targets DESTINATION EitAnnealing/lib)
install(FILES EitAnnealing-config.cmake DESTINATION EitAnnealing)